fix : 스크롤 js 제거 및 gap 설정

--- a/hyunique_app/src/main/webapp/resources/css/gpt.css
+++ b/hyunique_app/src/main/webapp/resources/css/gpt.css
@@ -51,7 +51,6 @@ button .btn-gpt-request {
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 11rem;
-	margin-top: 7rem;
 }
 
 .speech-bubble-user {
@@ -233,4 +232,8 @@ canvas {
 }
 .hidden {
     display: none;
+}
+.gap-area{
+	width:100%;
+	height:7rem;
 }
